--- a/machine_learning/tp_2.ipynb
+++ b/machine_learning/tp_2.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Récupération des données"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -25,6 +32,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Séparation des données d’entraînement et de test\n",
+    "\n",
+    "**Quelle est l’importance de mélanger les données avant de les diviser\n",
+    "en ensembles d’entraînement et de test ?**\n",
+    "\n",
+    "Le mélange des données permet d’éviter que les données d’entraînement ne soient ordonnées et donc que le modèle ne soit pas capable de généraliser."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -34,6 +53,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "x_train,x_test,y_train,y_test = train_test_split(mnist.data, mnist.target, test_size=0.3, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Visualisation d’une image"
    ]
   },
   {
@@ -59,6 +85,22 @@
     "interpolation=\"nearest\")\n",
     "plt.axis(\"off\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Classificateur binaire\n",
+    "\n",
+    "**Pourquoi devons-nous créer une variable cible binaire ?**\n",
+    "\n",
+    "La variable cible binaire permet de savoir si l'image est un 5 ou non. La variable initiale indique la valeur de l'image ce qui n'est pas utile pour la classification binaire.\n",
+    "\n",
+    "**Comment entraînons-nous le modèle SGDClassifier pour cette tâche de classification binaire ?**\n",
+    "\n",
+    "On utilise la méthode fit() du modèle SGDClassifier avec les données d'entraînement et la variable cible binaire.\n",
+    "\n"
    ]
   },
   {
@@ -100,8 +142,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 5. Précision et rappel (faux-positif/faux-négatif)\n",
+    "\n",
+    "**Quelle est la signification de la précision et du rappel dans le contexte de la classification ?**\n",
+    "\n",
     "Le score de précision c'est la proportion de prédictions positives qui sont correctes.\n",
-    "Le score de rappel (recall) c'est la proportion de vrais positifs qui sont correctement prédits."
+    "Le score de rappel (recall) c'est la proportion de vrais positifs qui sont correctement prédits.\n",
+    "\n",
+    "**Comment calculons-nous la précision et le rappel ?**\n",
+    "\n",
+    "On utilise les fonctions precision_score() et recall_score() de sklearn.metrics.\n",
+    "\n"
    ]
   },
   {
@@ -128,20 +179,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Comparaison avec RandomForestClassifier\n",
+    "\n",
+    "**Quelle est la différence entre le SGDClassifier et le RandomForestClassifier ?**\n",
+    "\n",
+    "SGDClassifier est une descente de gradient stochastique.\n",
+    "RandomForestClassifier est un ensemble de modèles d'arbres de décision.\n",
+    "\n",
+    "**Comment comparons-nous les performances de ces deux classificateurs ?**\n",
+    "\n",
+    "Il suffit de comparer les scores de précision et de rappel."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-6 {color: black;}#sk-container-id-6 pre{padding: 0;}#sk-container-id-6 div.sk-toggleable {background-color: white;}#sk-container-id-6 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-6 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-6 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-6 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-6 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-6 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-6 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-6 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-6 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-6 div.sk-item {position: relative;z-index: 1;}#sk-container-id-6 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-6 div.sk-item::before, #sk-container-id-6 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-6 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-6 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-6 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-6 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-6 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-6 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-6 div.sk-label-container {text-align: center;}#sk-container-id-6 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-6 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(random_state=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(random_state=1)</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-9 {color: black;}#sk-container-id-9 pre{padding: 0;}#sk-container-id-9 div.sk-toggleable {background-color: white;}#sk-container-id-9 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-9 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-9 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-9 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-9 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-9 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-9 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-9 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-9 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-9 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-9 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-9 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-9 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-9 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-9 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-9 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-9 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-9 div.sk-item {position: relative;z-index: 1;}#sk-container-id-9 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-9 div.sk-item::before, #sk-container-id-9 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-9 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-9 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-9 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-9 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-9 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-9 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-9 div.sk-label-container {text-align: center;}#sk-container-id-9 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-9 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-9\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(random_state=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-9\" type=\"checkbox\" checked><label for=\"sk-estimator-id-9\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(random_state=1)</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "RandomForestClassifier(random_state=1)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,6 +240,21 @@
     "\n",
     "print(\"precision_score is\",precision_score(y_test_2, y_pred_forest))\n",
     "print(\"recall score is\",recall_score(y_test_2, y_pred_forest))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7. Classificateur multiclasse\n",
+    "\n",
+    "**Comment adaptons-nous notre modèle pour effectuer une classification multiclasse ?**\n",
+    "\n",
+    "Nous utilisons un modèle compatible avec la classification multiclasse comme SVC ou SGDClassifier. Nous utilisons la méthode fit() avec les données d'entraînement et la variable cible (non binaire).\n",
+    "\n",
+    "**Quelles métriques d’évaluation devrions-nous utiliser pour évaluer la performance de ce modèle ?**\n",
+    "\n",
+    "Nous devrions utiliser la matrice de confusion et le score F1.\n"
    ]
   },
   {
@@ -229,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -237,20 +319,38 @@
      "output_type": "stream",
      "text": [
       "precision_score is 0.9777282476282615\n",
-      "recall score is 0.9777622828274073\n"
+      "recall score is 0.9777622828274073\n",
+      "f1 score is 0.9777335207499404\n",
+      "confusion matrix is [[2058    0    4    1    2    1    5    0    3    2]\n",
+      " [   1 2366   13    4    1    0    0    3    1    1]\n",
+      " [   6    3 2081    6    6    1    2    8    8    3]\n",
+      " [   2    1   14 2083    1   17    1   17   18   11]\n",
+      " [   1    5    5    0 2016    0    6    5    1   24]\n",
+      " [   2    1    2    8    8 1881   13    1    4    3]\n",
+      " [   6    0    2    0    2    8 1973    0    8    0]\n",
+      " [   3    6    6    1   14    1    0 2102    5   18]\n",
+      " [   5    7    6   13    6   14    5    3 1982    7]\n",
+      " [   4    7    5   11   14    1    1   17    3 1993]]\n"
      ]
     }
    ],
    "source": [
+    "# matrice de confusion\n",
+    "from sklearn.metrics import confusion_matrix, f1_score\n",
+    "\n",
     "# test SVC\n",
     "y_pred_svc = svm_clf.predict(x_test)\n",
     "print(\"precision_score is\",precision_score(y_test, y_pred_svc,average='macro'))\n",
-    "print(\"recall score is\",recall_score(y_test, y_pred_svc,average='macro'))"
+    "print(\"recall score is\",recall_score(y_test, y_pred_svc,average='macro'))\n",
+    "print(\"f1 score is\",f1_score(y_test, y_pred_svc,average='macro'))\n",
+    "conf_mx = confusion_matrix(y_test, y_pred_svc)\n",
+    "print(\"confusion matrix is\",conf_mx)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -258,15 +358,32 @@
      "output_type": "stream",
      "text": [
       "precision_score is 0.8870318773509916\n",
-      "recall score is 0.8824096151375068\n"
+      "recall score is 0.8824096151375068\n",
+      "f1 score is 0.8819204586183356\n",
+      "confusion matrix is [[1974    0   10   10    5   33   22    1   18    3]\n",
+      " [   1 2302   30    1    1   25    3    3   16    8]\n",
+      " [  10   11 1920   24   23   35   21   20   47   13]\n",
+      " [   5    3  114 1597    3  312    8   31   54   38]\n",
+      " [   5    7   23    9 1752   44   26   19   20  158]\n",
+      " [   6    6   18   28   25 1713   59    5   50   13]\n",
+      " [  14    0   19    1   10   35 1902    0   18    0]\n",
+      " [  10    4   29    7   21   19    4 1966   11   85]\n",
+      " [  12   29   40   37   14  214   22   10 1627   43]\n",
+      " [   5    6    9   19   39   77    0   82   29 1790]]\n"
      ]
     }
    ],
    "source": [
+    "# matrice de confusion\n",
+    "from sklearn.metrics import confusion_matrix, f1_score\n",
+    "\n",
     "# test SDGClassifier\n",
     "y_pred_sgd = sgd_clf_multi.predict(x_test)\n",
     "print(\"precision_score is\",precision_score(y_test, y_pred_sgd,average='macro'))\n",
-    "print(\"recall score is\",recall_score(y_test, y_pred_sgd,average='macro'))"
+    "print(\"recall score is\",recall_score(y_test, y_pred_sgd,average='macro'))\n",
+    "print(\"f1 score is\",f1_score(y_test, y_pred_sgd,average='macro'))\n",
+    "conf_mx_sgd = confusion_matrix(y_test, y_pred_sgd)\n",
+    "print(\"confusion matrix is\",conf_mx_sgd)\n"
    ]
   },
   {
