feat: working exo 4

--- a/recherche_op/exam/exam.ipynb
+++ b/recherche_op/exam/exam.ipynb
@@ -215,75 +215,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal Solution: [300. 200. 100.]\n",
-      "Optimal Objective Value: -2300.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hrey2\\AppData\\Local\\Temp\\ipykernel_14796\\3001761302.py:19: RuntimeWarning: divide by zero encountered in divide\n",
-      "  ratios = tableau[:-1, -1] / tableau[:-1, entering_var]\n"
+      " matrice du systeme : \n",
+      " [[  2.   1.   1.   0.   0. 700.]\n",
+      " [  1.   2.   0.   1.   0. 800.]\n",
+      " [  1.   0.   0.   0.   1. 300.]\n",
+      " [  4.   5.   0.   0.   0.   0.]] \n",
+      "\n",
+      "vars dans l'ordre : {'n': 0, 's': 1, 'e1': 2, 'e2': 3, 'e3': 4} \n",
+      "\n",
+      "matrice final : \n",
+      " [[    1.        0.        0.667    -0.333     0.      200.   ]\n",
+      " [    0.        1.       -0.333     0.667     0.      300.   ]\n",
+      " [    0.        0.       -0.667     0.333     1.      100.   ]\n",
+      " [    0.        0.       -1.       -2.        0.    -2300.   ]] \n",
+      "\n",
+      "Pour maximiser les valeurs restante une fois le processus terminé sont les suivantes\n",
+      "n = 200.0\n",
+      "s = 300.0\n",
+      "e3 = 100.0\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "from simplex import parse, simplex\n",
+    "# variable une seule lettre maj ou min\n",
+    "# ex = equation numéro x\n",
     "\n",
+    "m1, vars = parse([\"max z = 4n + 5s\", # nature = 4€ et sans sucre = 5€\n",
+    "                \"2n + s <= 700\", # e1 (lait)\n",
+    "                \"n + 2s <= 800\", # e2 (vanille)\n",
+    "                \"n <= 300\"]) # e3 (sucre)\n",
     "\n",
-    "def simplex_algorithm(c, A, b):\n",
-    "    m, n = A.shape\n",
-    "    tableau = np.zeros((m + 1, n + m + 1))\n",
+    "print(f\" matrice du systeme : \\n {m1} \\n\")\n",
+    "print(f\"vars dans l'ordre : {vars} \\n\")\n",
     "\n",
-    "    # Initialize tableau\n",
-    "    tableau[:-1, :n] = A\n",
-    "    tableau[:-1, -1] = b\n",
-    "    tableau[-1, :n] = -c\n",
-    "    tableau[-1, -1] = 0\n",
-    "\n",
-    "    while any(tableau[-1, :n] < 0):\n",
-    "        # Choose entering variable (column k with the most negative coefficient)\n",
-    "        entering_var = np.argmin(tableau[-1, :n])\n",
-    "\n",
-    "        # Choose leaving variable (row l with the minimum ratio b[i]/A[i, k] where A[i, k] > 0)\n",
-    "        ratios = tableau[:-1, -1] / tableau[:-1, entering_var]\n",
-    "        leaving_var = np.argmin(ratios)\n",
-    "\n",
-    "        # Update the tableau\n",
-    "        pivot = tableau[leaving_var, entering_var]\n",
-    "        tableau[leaving_var, :] /= pivot\n",
-    "        for i in range(m + 1):\n",
-    "            if i != leaving_var:\n",
-    "                tableau[i, :] -= tableau[i, entering_var] * \\\n",
-    "                    tableau[leaving_var, :]\n",
-    "\n",
-    "    # Extract optimal solution and objective value\n",
-    "    solution = tableau[:-1, -1]\n",
-    "    objective_value = -tableau[-1, -1]\n",
-    "\n",
-    "    return solution, objective_value\n",
-    "\n",
-    "\n",
-    "# Test the implementation with the provided example\n",
-    "\n",
-    "c = np.array([4, 5, 0, 0, 0, 0])\n",
-    "A = np.array([[1, 2, 1, 0, 0, 0],\n",
-    "              [2, 1, 0, 1, 0, 0],\n",
-    "              [1, 0, 0, 0, 1, 0]])\n",
-    "b = np.array([800, 700, 300])\n",
-    "\n",
-    "solution, objective_value = simplex_algorithm(c, A, b)\n",
-    "\n",
-    "print(\"Optimal Solution:\", solution)\n",
-    "print(\"Optimal Objective Value:\", objective_value)"
+    "m2, final = simplex(m1, vars)\n",
+    "print(f\"matrice final : \\n {m2} \\n\")\n",
+    "print(f\"Pour maximiser les valeurs restante une fois le processus terminé sont les suivantes\")\n",
+    "for k,v in final.items():\n",
+    "    print(f\"{k} = {v}\")"
    ]
   },
   {
