--- a/recherche_op/exam/exam.ipynb
+++ b/recherche_op/exam/exam.ipynb
@@ -214,8 +214,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Une usine fabrique deux types de glaces à la vanille, l’une normale et l’autre sans\n",
+    "sucre à partir de trois ingrédients : Vanille, Lait et Sucre.\n",
+    "\n",
+    "Un bac de glace normale se compose avec les proportions suivantes **1kg de Vanille**, **2kg de lait** et **1kg de sucre**\n",
+    "\n",
+    "un bac de glace sans sucre se compose avec les proportions suivantes **2kg de Vanille**, **1kg de lait** et **0kg de sucre**.\n",
+    "\n",
+    "Au début de la production on a **800kg de Vanille**, **700kg de lait** et **300kg de sucre.**\n",
+    "\n",
+    "La vente d’un kg de glace normale rapporte **4 euros** et la vente d’un kg de glace sans sucre rapporte **5 euros.**\n",
+    "Le directeur de l’usine de fabrication de glaces souhaite **maximiser le profit sur les glaces à la vanille.** Que proposez-vous comme solution ?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -248,6 +265,7 @@
     "# variable une seule lettre maj ou min\n",
     "# ex = equation numéro x\n",
     "\n",
+    "#n = normale et s = sans sucre\n",
     "m1, vars = parse([\"max z = 4n + 5s\", # nature = 4€ et sans sucre = 5€\n",
     "                \"2n + s <= 700\", # e1 (lait)\n",
     "                \"n + 2s <= 800\", # e2 (vanille)\n",
